SERVER-91413 robustify CursorEstablisher error prioritization (#25316)

GitOrigin-RevId: 74fc9552b950bf0cc0e1d36ea630778081269e8e